# Barnes_Hut_Demo

./: .gitignore  CMakeLists.txt  Drawable.h  LICENSE  README.md  acceleration.h  barnes_hut.cc  barnes_hut.h  constants.h  distribution.h  main.cc  numerics.h  physics.h  quadtree.cc  quadtree.h
include/: Drawable.h  constants.h  distribution.h  numerics.h
src/: barnes_hut.cc  quadtree.cc
